# ckanext-theming

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
ckanext/theming/: cli.py  helpers.py  plugin.py  views.py
ckanext/theming/assets/: script.js  webassets.yml
ckanext/theming/logic/: action.py  auth.py  schema.py  validators.py
ckanext/theming/public/base/css/: custom_theming.css
ckanext/theming/templates/: base.html  footer.html
ckanext/theming/templates/admin/: index.html
ckanext/theming/templates/emails/: invite_user.txt  invite_user_subject.txt  reset_password.txt  reset_password_subject.txt
ckanext/theming/templates/home/: layout3.html
ckanext/theming/templates/home/snippets/: about_text.html  promoted.html  search.html  stats.html
ckanext/theming/templates/package/snippets/: additional_info.html  package_basic_fields.html  package_metadata_fields.html
ckanext/theming/templates/snippets/: social.html
ckanext/theming/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/theming/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext_theming.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
